--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -10,8 +10,11 @@
    
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="use_workout_app_for_gym_by_suraj_tiwari"
+        android:label="Workout"
         android:icon="@mipmap/ic_launcher">
+         <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-8597584409206720~7269834018"/>
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
